--- a/package.json
+++ b/package.json
@@ -18,23 +18,24 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@stripe/stripe-react-native": "0.38.6",
     "axios": "^1.7.9",
-    "expo-dev-client": "~5.0.12",
-    "expo-modules-core": "~2.2.2",
     "fbjs": "^3.0.5",
     "isomorphic-fetch": "^3.0.0",
     "node-fetch": "^3.3.2",
     "react": "18.3.1",
     "react-native": "^0.76.7",
+    "react-native-css-transformer": "^2.0.0",
     "react-native-document-picker": "^9.3.1",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.20.2",
+    "react-native-gradle-plugin": "^0.71.6",
     "react-native-linking": "^0.0.0",
     "react-native-pdf": "^6.7.7",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.4.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
